--- a/map.html
+++ b/map.html
@@ -3,30 +3,10 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8" />
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <title>Alumni Map</title>
-<style>
-    .header{
-        text-align: center;
-        padding: 3px;
-    }
-    nav {
-        display: flex;
-        padding: 20px;
-    }
-
-    .left-link {
-        flex: 1 1;
-        display: block;
-    }
-    .right-link{
-        display: block;
-    }
-    iframe {
-        width: 100%; 
-        height: 750px; 
-        display: block;
-    }
-</style>
 </head>
 <body>
     <div class="header">
@@ -34,7 +14,7 @@
     </div>
 <nav>
     <div class="left-link">
-        <a href="https://beyondtw.wordpress.com/">BT Homepage</a>
+        <a href="map.html">Home</a>
     </div>
     <div class="right-link">
         <a href="#">Login</a>
